--- a/paper.tex
+++ b/paper.tex
@@ -752,34 +752,34 @@ giant radio relics \citep{2010Sci...330..347V}.
 \begin{figure*}
 \begin{minipage}{1\columnwidth}
    \begin{center}\Large{Radio profiles}\\
-     \includegraphics[width=\columnwidth]{prof.comp.Xtu.eps}
+     \includegraphics[width=\columnwidth]{prof.comp.KrTTDth.Xtu.eps}
    \end{center}
 \end{minipage}
 \begin{minipage}{1\columnwidth}
    \begin{center}\Large{Radio spectra}\\
-     \includegraphics[width=\columnwidth]{spec.comp.Xtu.eps}
+     \includegraphics[width=\columnwidth]{spec.comp.KrTTDth.Xtu.eps}
    \end{center}
 \end{minipage}
 \\
 \begin{minipage}{1\columnwidth}
   \begin{center}%\Large{\Mflatturb:}\\ 
-    \includegraphics[width=\columnwidth]{prof.comp.aCR.eps}
+    \includegraphics[width=\columnwidth]{prof.comp.KrTTDth.aCR.eps}
   \end{center}
 \end{minipage}
 \begin{minipage}{1\columnwidth}
    \begin{center}%\Large{\it Brunetti et al. (2012)}:\\
-     \includegraphics[width=\columnwidth]{spec.comp.aCR.eps}
+     \includegraphics[width=\columnwidth]{spec.comp.KrTTDth.aCR.eps}
    \end{center}
 \end{minipage}
 \\
 \begin{minipage}{1\columnwidth}
   \begin{center}%\Large{\Mflatturb:}\\ 
-    \includegraphics[width=\columnwidth]{prof.comp.aI0.eps}
+    \includegraphics[width=\columnwidth]{prof.comp.KrTTDth.aI0.eps}
   \end{center}
 \end{minipage}
 \begin{minipage}{1\columnwidth}
    \begin{center}%\Large{\it Brunetti et al. (2012)}:\\
-     \includegraphics[width=\columnwidth]{spec.comp.aI0.eps}
+     \includegraphics[width=\columnwidth]{spec.comp.KrTTDth.aI0.eps}
    \end{center}
 \end{minipage}
 \caption{...}
