--- a/paper.bib
+++ b/paper.bib
@@ -5393,5 +5393,22 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...771..131B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{2001A&A...365L..67A,
+   author = {{Arnaud}, M. and {Aghanim}, N. and {Gastaud}, R. and {Neumann}, D.~M. and 
+	{Lumb}, D. and {Briel}, U. and {Altieri}, B. and {Ghizzardi}, S. and 
+	{Mittaz}, J. and {Sasseen}, T.~P. and {Vestrand}, W.~T.},
+    title = "{XMM-Newton observation of the Coma Galaxy cluster. The temperature structure in the central region}",
+  journal = {\aap},
+   eprint = {astro-ph/0011086},
+ keywords = {GALAXIES: INTERGALACTIC MEDIUM, COSMOLOGY: OBSERVATIONS, COSMOLOGY: DARK MATTER, COSMOLOGY: LARGE-SCALE STRUCTURE OF THE UNIVERSE, X-RAYS: GENERAL},
+     year = 2001,
+    month = jan,
+   volume = 365,
+    pages = {L67-L73},
+      doi = {10.1051/0004-6361:20000195},
+   adsurl = {http://adsabs.harvard.edu/abs/2001A%26A...365L..67A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
