Added files via upload

--- a/paper.bib
+++ b/paper.bib
@@ -5409,6 +5409,24 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2001A%26A...365L..67A},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{2009ApJ...696.1886B,
+   author = {{Bonamente}, M. and {Lieu}, R. and {Bulbul}, E.},
+    title = "{The Diffuse Soft Excess Emission in the Coma Cluster from the ROSAT All-Sky Survey}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0903.3067},
+ primaryClass = "astro-ph.CO",
+ keywords = {galaxies: clusters: individual: Coma, large-scale structure of universe},
+     year = 2009,
+    month = may,
+   volume = 696,
+    pages = {1886-1891},
+      doi = {10.1088/0004-637X/696/2/1886},
+   adsurl = {http://adsabs.harvard.edu/abs/2009ApJ...696.1886B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 
 
